<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mokpo.capstonedesign.ui.IngredientManagement.IngredientManagementFragment"
        android:label="@string/ingredient_management"
        tools:layout="@layout/fragment_ingredient_management" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mokpo.capstonedesign.ui.RecipeRecommend.DashboardFragment"
        android:label="@string/recipe_recommend"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mokpo.capstonedesign.ui.community.NotificationsFragment"
        android:label="@string/community"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/settings"
        android:name="com.mokpo.capstonedesign.ui.settings.SettingsFragment"
        android:label="설정"
        />
</navigation>